Closed
Bug 1488889
Opened 7 years ago
Closed 7 years ago
Rendering on about:about and some other parent-process pages is broken
Categories
(Core :: Web Painting, defect, P1)
Core
Web Painting
Tracking
()
RESOLVED
FIXED
mozilla64
| Tracking | Status | |
|---|---|---|
| geckoview62 | --- | unaffected |
| firefox-esr60 | --- | unaffected |
| firefox62 | --- | unaffected |
| firefox63 | --- | unaffected |
| firefox64 | + | fixed |
People
(Reporter: botond, Assigned: mikokm)
References
Details
(Keywords: regression)
Attachments
(1 file)
STR:
1. Load about:about
2. Zoom in to 110%
3. Move the mouse around or click on the address bar
Actual results:
The page goes blank. Moving the mouse over the page
content causes some of the links to briefly appear
and then disappear again.
Expected results:
Normal rendering.
This appears to be a recent regression.
| Reporter | ||
Comment 1•7 years ago
|
||
The symptoms happen in some other sccenarios as well, such as Responsive Design Mode.
| Reporter | ||
Comment 2•7 years ago
|
||
Mozregression points to bug 1413546:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=873f58fff17d0551455eeb36614b91d197c47dbc&tochange=716d49302a28f9231c628a1dca5a744437403948
Miko, could you have a look please?
Blocks: 1413546
Flags: needinfo?(mikokm)
Summary: Rendering on about:about is broken → Rendering on about:about and some other parent-process pages is broken
| Reporter | ||
Updated•7 years ago
|
Component: Graphics → Layout: Web Painting
| Assignee | ||
Updated•7 years ago
|
Assignee: nobody → mikokm
Status: NEW → ASSIGNED
Flags: needinfo?(mikokm)
| Reporter | ||
Comment 3•7 years ago
|
||
[Tracking Requested - why for this release]:
Serious rendering issue on parent-process pages
such as about: pages and Responsive Design Mode.
Bug 1413546 landed just after the merge, so 63 is not affected.
| Assignee | ||
Comment 4•7 years ago
|
||
| workaround | ||
The problem here seems to be that nsDisplayZoom item inside nsDisplaySubDocument disappears randomly.
It seems worthy to note that this feature can be disabled at any point by flipping layout.display-list.retain.chrome to false.
| Assignee | ||
Comment 6•7 years ago
|
||
| Assignee | ||
Comment 7•7 years ago
|
||
The cause for the items disappearing is that nsDisplayResolution and nsDisplayZoom inherit from nsDisplaySubDocument, but do not set member variable |mSubDocFrame|, which causes nsDisplaySubDocument::HasDeletedFrame() to return true.
Comment 8•7 years ago
|
||
Comment on attachment 9006719 [details]
Bug 1488889 - Pass nsSubDocumentFrame to nsDisplaySubDocument constructor
Matt Woodrow (:mattwoodrow) has approved the revision.
Attachment #9006719 -
Flags: review+
Updated•7 years ago
|
Priority: -- → P1
Pushed by mikokm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/d7df7b04f55a
Pass nsSubDocumentFrame to nsDisplaySubDocument constructor r=mattwoodrow
| Reporter | ||
Comment 10•7 years ago
|
||
Thanks for the quick fix!
Comment 11•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Updated•7 years ago
|
status-firefox62:
--- → unaffected
status-firefox-esr60:
--- → unaffected
status-geckoview62:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•